src/objects/Food__c.object
<CustomObject>
    <description>Food type available</description>
    <fields>
        <fullName>Food_Category__c</fullName>
        <label>Food Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                    <default>true</default>
                    <label>Vegetarian</label>
                </value>
                <value>
                    <fullName>Non-Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Egeterian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Items__c</fullName>
        <label>Food Items</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Food_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mutton</fullName>
                </value>
                <value>
                    <fullName>chicken</fullName>
                </value>
                <value>
                    <fullName>fish</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Ladiesfingers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Type__c</fullName>
        <inlineHelpText>Enter food type</inlineHelpText>
        <label>Food Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                    <default>true</default>
                    <label>Breakfast</label>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Snacks</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_plates_you_want__c</fullName>
        <label>No. of plates you want</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_plate__c</fullName>
        <label>Price per plate</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Food_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>150</fullName>
                    <default>true</default>
                    <label>150</label>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tota__c</fullName>
        <formula>No_of_plates_you_want__c * VALUE(TEXT( Price_per_plate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Food</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Food Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>plates_limit</fullName>
        <active>true</active>
        <errorConditionFormula>IF(No_of_plates_you_want__c &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Sorry, You can not order more than 10 plates</errorMessage>
    </validationRules>
</CustomObject>